fix: page overflow due to absolutely positioned screen reader elements (fixes #1) docs: add footnote example

--- a/packages/starlight-theme-obsidian/styles/common.css
+++ b/packages/starlight-theme-obsidian/styles/common.css
@@ -297,6 +297,12 @@
     }
 }
 
+/* Fixes screen reader elements being positioned outside of page in some browsers (Chrome),
+    causing unexpected vertical overflow of the body
+*/
+.sr-only {
+    position: relative;
+}
 
 /* Remove border of mobile preferences */
 .mobile-preferences {
